--- a/templates/apache/1/rancher-compose.yml
+++ b/templates/apache/1/rancher-compose.yml
@@ -4,7 +4,7 @@ catalog:
   version: v4.3.18
   description: "Serves PHP web apps populated in volume"
   minimum_rancher_version: v1.5.0
-  upgrade_from: v4.3.17
+  upgrade_from: 4.3.17
   questions:
     - variable: "APACHE_SCALE"
       description: |
