--- a/templates/apache/2/rancher-compose.yml
+++ b/templates/apache/2/rancher-compose.yml
@@ -1,10 +1,10 @@
 version: '2'
 catalog:
   name: Apache
-  version: 1.5.6-rancher1-1
+  version: v1.5.6-rancher1-1
   description: "Serves PHP web apps populated in volume"
   minimum_rancher_version: v1.5.0
-  upgrade_from: 1.5.5-rancher1-1
+  upgrade_from: v1.5.5-rancher1-1
   questions:
     - variable: "APACHE_SCALE"
       description: |
