--- a/templates/apache/1/rancher-compose.yml
+++ b/templates/apache/1/rancher-compose.yml
@@ -4,7 +4,7 @@ catalog:
   version: v1.5.5-vancher1-1
   description: "Serves PHP web apps populated in volume"
   minimum_rancher_version: v1.5.0
-  upgrade_from: v1.5.4-vancher1-1
+  upgrade_from: "!1.5.4-vancher1-1"
   questions:
     - variable: "APACHE_SCALE"
       description: |
