--- a/templates/apache/1/rancher-compose.yml
+++ b/templates/apache/1/rancher-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 catalog:
   name: Apache
-  version: v1.5.5-vancher1-1
+  version: 1.5.5-vancher1-1
   description: "Serves PHP web apps populated in volume"
   minimum_rancher_version: v1.5.0
   upgrade_from: !1.5.4-vancher1-1
