--- a/templates/apache/2/rancher-compose.yml
+++ b/templates/apache/2/rancher-compose.yml
@@ -1,10 +1,10 @@
 version: '2'
 catalog:
   name: Apache
-  version: v1.5.6-vancher1-1
+  version: vincent-3.0.0
   description: "Serves PHP web apps populated in volume"
   minimum_rancher_version: v1.5.0
-  upgrade_from: "!v1.5.4-vancher1-1"
+  upgrade_from: vincent-2.0.0
   questions:
     - variable: "APACHE_SCALE"
       description: |
