--- a/templates/apache/1/rancher-compose.yml
+++ b/templates/apache/1/rancher-compose.yml
@@ -4,6 +4,7 @@ catalog:
   version: v1.5.5-vancher1-1
   description: "Serves PHP web apps populated in volume"
   minimum_rancher_version: v1.5.0
+  upgrade_from: vincent-1.0
   questions:
     - variable: "APACHE_SCALE"
       description: |
