--- a/templates/apache/template.yml
+++ b/templates/apache/template.yml
@@ -1,7 +1,7 @@
 name: Apache Webserver
 description: |
   Apache Stuff
-default_version: 0.0.1
+version: 0.0.1
 category: Apache
 maintainer: "Amy Chen <amy@rancher.com>"
 minimum_rancher_version: v1.5.0
