--- a/templates/apache/2/rancher-compose.yml
+++ b/templates/apache/2/rancher-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
 name: Apache
-version: v1.5.6-vancher1-1
+template_version: v1.5.6-vancher1-1
 description: "Serves PHP web apps populated in volume"
 minimum_rancher_version: v1.5.0
 upgrade_from: v1.5.4-vancher1-1
