--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -1,6 +1,5 @@
-version: '2'
 name: Apache
-template_version: v1.5.4-vancher1-1
+version: v1.5.4-vancher1-1
 description: "Serves PHP web apps populated in volume"
 minimum_rancher_version: v1.5.0
 questions:
