--- a/templates/apache/0/template-version.yml
+++ b/templates/apache/0/template-version.yml
@@ -1,6 +1,6 @@
 name: Apache
 version: v1.5.4-vancher1-1
-#description: "Serves PHP web apps populated in volume"
+description: "Serves PHP web apps populated in volume"
 minimum_rancher_version: v1.5.0
 questions:
   - variable: "APACHE_SCALE"
