--- a/templates/apache/2/template-version.yml
+++ b/templates/apache/2/template-version.yml
@@ -1,8 +1,9 @@
 name: Apache
-version: v1.5.4-vancher1-1
+version: v1.5.6-vancher1-1
 description: "Serves PHP web apps populated in volume"
 minimumRancherVersion: v1.5.0
 maximumRancherVersion: v2.0.0
+upgradeFrom: v1.5.5-vancher1-1
 questions:
   - variable: "APACHE_SCALE"
     description: |
