--- a/templates/default-versions-1/1/rancher-compose.yml
+++ b/templates/default-versions-1/1/rancher-compose.yml
@@ -1,3 +1,11 @@
 name: Apache
 version: v1.5.4-vancher1-1
 description: "Test for Rancher Version"
+questions:
+  - variable: "TEST"
+    description: |
+      test
+    label: "test"
+    type: int
+    required: true
+    default: 1
