--- a/templates/apache/config.yml
+++ b/templates/apache/config.yml
@@ -3,3 +3,4 @@ description: |
   This template tests default versions. There is no default version.
 version: 3.0.0
 project_url: www.test.com
+default_version: v1.5.5-vancher1-1
