--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -1,9 +1,14 @@
-.catalog:
-  name: "Service Affinity rule check"
-  version: "1.0.0"
-  description: Description in the rancher compose.
-  minimum_rancher_version: v0.46.0
-servicerelyingonlable:
-  scale: 1
-Service1withlabel:
-  scale: 1
+version: '2'
+catalog:
+  name: Apache
+  version: v4.3.17-rancher1
+  description: "Serves PHP web apps populated in volume"
+  minimum_rancher_version: v1.5.0
+  questions:
+    - variable: "APACHE_SCALE"
+      description: |
+        Number of Apache nodes.
+      label: "Apache nodes"
+      type: int
+      required: true
+      default: 1
