--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -1,5 +1,5 @@
 .catalog:
-  name: "Service Affinity rule check"
+  name: "Service Affinity rule check 123"
   version: "1.0.0"
   description: Description in the rancher compose.
   minimum_rancher_version: v0.46.0
