--- a/templates/apache/config.yml
+++ b/templates/apache/config.yml
@@ -2,7 +2,11 @@ name: Affinity Test 1
 description: |
   A223444 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 template sets up a service that has a label.  Then creates another service that relies on that label.  Both should end up on the same host.
 version: 2.0.0
-category: Test
+categories:
+- category1
+- category2
+- category3
 maintainer: Tani Fiduccia
 license: 9087 license
 projectURL: http://www.google.com
+
