--- a/templates/apache/config.yml
+++ b/templates/apache/config.yml
@@ -6,6 +6,9 @@ categories:
 - category1
 - category2
 - category4
+labels:
+  key1: value1
+  key2: value2
 maintainer: Tani Fiduccia
 license: 9087 license
 projectURL: http://www.google.com
