--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -1,18 +1,6 @@
-servicerelyingonlable:
-  log_driver: ''
-  labels:
-    io.rancher.scheduler.affinity:container_label: foo=bar
-    io.rancher.container.pull_image: always
-  tty: true
-  log_opt: {}
-  image: ubuntu:14.04.3
-  stdin_open: true
-Service1withlabel:
-  log_driver: ''
-  labels:
-    io.rancher.container.pull_image: always
-    foo: bar
-  tty: true
-  log_opt: {}
-  image: ubuntu:14.04.3
-  stdin_open: true
+version: '2'
+services:
+  test:
+    image: nginx
+    environment:
+      ENVVAR: ${ENVVAR}
