--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -8,4 +8,4 @@ catalog:
     - variable: "test"
       description: "Host label where to run traefik service."
       label: "Host label:"
-      type: "string"
+      type: "int"
