--- a/templates/apache/config.yml
+++ b/templates/apache/config.yml
@@ -1,14 +1,5 @@
-name: Affinity Test 4
+name: Ghost
 description: |
-  A223444 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 123 template sets up a service that has a label.  Then creates another service that relies on that label.  Both should end up on the same host.
-version: 2.0.0
-maintainer: Tani Fiduccia
-license: 9087 license
-projectURL: http://www.google.com
-labels:
-  key1: value1
-  key2: value2
-  key4: value6
-categories:
-- category1
-- category2
+  Blog powered by Ghost
+version: v0.1-educaas
+category: Blogging
