--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -9,5 +9,5 @@
       description: "public port to access the blog"
       label: "Public Port"
       required: true
-      type: "multiline"
+      type: "int"
 ghost:
