--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -1,4 +1,6 @@
-ghost:
-  image: nginx
-  environment:
-    public_port: ${public_port}
+version: '2'
+services:
+  ghost:
+    image: nginx
+    environment:
+      public_port: ${public_port}
