--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -5,7 +5,7 @@
   description: "Blog powered by Ghost. Requires no database"
   minimum_rancher_version: v0.51.0
   questions:
-    - variable: public_port
+    - variable: "public_port"
       description: "public port to access the blog"
       label: "Public Port"
       required: true
