--- a/templates/apache/0/docker-compose.yml
+++ b/templates/apache/0/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
-services:
+#services:
   ghost:
     image: nginx
     environment:
-  public_port: ${public_port}
+      public_port: ${public_port}
