--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -1,6 +1,6 @@
-# .catalog:
+.catalog:
   name: "Ghost"
-  version: "v0.1-educaas"
+  #version: "v0.1-educaas"
   description: "Blog powered by Ghost. Requires no database"
   minimum_rancher_version: v0.51.0
   questions:
