--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -1,13 +1,14 @@
-name: "Ghost2"
-version: "v0.1-educaas"
-description: "Blog powered by Ghost. Requires no database"
-uuid: ghost-0
-minimum_rancher_version: v0.51.0
-questions:
-  - variable: public_port
-    description: "public port to access the blog"
-    label: "Public Port"
-    required: true
-    default: "80"
-    type: "int"
+catalog:  
+  name: "Ghost2"
+  version: "v0.1-educaas"
+  description: "Blog powered by Ghost. Requires no database"
+  uuid: ghost-0
+  minimum_rancher_version: v0.51.0
+  questions:
+    - variable: public_port
+      description: "public port to access the blog"
+      label: "Public Port"
+      required: true
+      default: "80"
+      type: "int"
 ghost:
