--- a/templates/apache/rancher-compose.yml
+++ b/templates/apache/rancher-compose.yml
@@ -1,5 +1,5 @@
 catalog:  
-  name: "Ghost"
+  name: "Ghost1"
   version: "v0.1-educaas"
   description: "Blog powered by Ghost. Requires no database"
   uuid: ghost-0
