--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -4,6 +4,7 @@ catalog:
   description: "Blog powered by Ghost. Requires no database"
   uuid: ghost-0
   minimum_rancher_version: v0.51.0
+  is_system: true
   questions:
     - variable: public_port
       description: "public port to access the blog"
