--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -5,6 +5,9 @@ catalog:
   uuid: ghost-0
   minimum_rancher_version: v0.51.0
   is_system: true
+  labels:
+   - test
+   - test1
   questions:
     - variable: public_port
       description: "public port to access the blog"
