--- a/templates/apache/0/rancher-compose.yml
+++ b/templates/apache/0/rancher-compose.yml
@@ -6,8 +6,8 @@ catalog:
   minimum_rancher_version: v0.51.0
   is_system: true
   labels:
-   - test
-   - test1
+   "label1" : "value1"
+   "label2" : "value2"
   questions:
     - variable: public_port
       description: "public port to access the blog"
